# behavior-sequence-transformer-pytorch

./: LICENSE  README.md  pyproject.toml
dataset/: download_ml-10m.py
notebook/: bst.ipynb
src/: config.py  dataset.py  main.py  model.py
