[tool.poetry]
name = "behavior-sequence-transformer-pytorch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "2.2"
lightning = "^2.5.0.post0"
requests = "^2.32.3"
numpy = "^1"
mlflow = "^2.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
